[project]
name = "comfyui_experiments"
description = "Nodes: ModelSamplerTonemapNoiseTest, TonemapNoiseWithRescaleCFG, ReferenceOnlySimple, RescaleClassifierFreeGuidanceTest, ModelMergeBlockNumber, ModelMergeSDXL, ModelMergeSDXLTransformers, ModelMergeSDXLDetailedTransformers."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/comfyanonymous/ComfyUI_experiments"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_experiments"
Icon = ""
